# trader-sentiment-analysis

./: .gitignore  README.md  Trader_Sentiment_Analysis_Report.docx  download_gdrive.py  pyproject.toml  requirements.txt  trader-sentiment-analysis.bundle  trader_sentiment_analysis.py
.github/workflows/: ci.yml
data/: README.md
reports/: README.md  build_report.js  package.json
src/sentiment_analysis/: __init__.py  analysis.py  charts.py  cli.py  config.py  data_loader.py
tests/: test_analysis.py
