[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis"
version = "1.0.0"
description = "Trader performance vs. market sentiment analysis toolkit"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
